--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.11.0",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "router": "^1.3.8"
   }
 }
